--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
 	     the current page has one -->
 	%sapper.head%
 </head>
-<body>
+<body bgcolor="#2b3531">
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
 	<div id="sapper">%sapper.html%</div>
